; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/ia64/kvm/extr_vcpu.c_mm_switch_action.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/ia64/kvm/extr_vcpu.c_mm_switch_action.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ia64_psr = type { i32 }

@mm_switch_table = common dso_local global i32** null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @mm_switch_action to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mm_switch_action(i32 %0, i32 %1) #0 {
  %3 = alloca %struct.ia64_psr, align 4
  %4 = alloca %struct.ia64_psr, align 4
  %5 = getelementptr inbounds %struct.ia64_psr, %struct.ia64_psr* %3, i32 0, i32 0
  store i32 %0, i32* %5, align 4
  %6 = getelementptr inbounds %struct.ia64_psr, %struct.ia64_psr* %4, i32 0, i32 0
  store i32 %1, i32* %6, align 4
  %7 = load i32**, i32*** @mm_switch_table, align 8
  %8 = getelementptr inbounds %struct.ia64_psr, %struct.ia64_psr* %3, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i64 @MODE_IND(i32 %9)
  %11 = getelementptr inbounds i32*, i32** %7, i64 %10
  %12 = load i32*, i32** %11, align 8
  %13 = getelementptr inbounds %struct.ia64_psr, %struct.ia64_psr* %4, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i64 @MODE_IND(i32 %14)
  %16 = getelementptr inbounds i32, i32* %12, i64 %15
  %17 = load i32, i32* %16, align 4
  ret i32 %17
}

declare dso_local i64 @MODE_IND(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
